[gd_scene load_steps=11 format=3 uid="uid://dfp7shhr7k6y7"]

[ext_resource type="Script" uid="uid://b6v8aehavifo6" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dmwgj1chql5js" path="res://fishing_screen.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cslnphk10k46d" path="res://cannery_screen.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bklywcol1l173" path="res://upgrade_screen.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cuycoalmdivpd" path="res://market_screen.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://c3t6dvk2v86xg" path="res://crew_screen.tscn" id="6_0v6ff"]
[ext_resource type="PackedScene" path="res://start_screen.tscn" id="7_3bknm"]
[ext_resource type="PackedScene" path="res://inventory_screen.tscn" id="8_2s3yr"]
[ext_resource type="PackedScene" path="res://recipe_screen.tscn" id="9_6k8b2"]
[ext_resource type="PackedScene" path="res://skill_tree_screen.tscn" id="10_r5mtm"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="TownBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoatButton" type="Button" parent="."]
light_mask = 3
layout_mode = 0
offset_left = 106.0
offset_top = 118.0
offset_right = 286.0
offset_bottom = 198.0
focus_mode = 0
text = "BOAT"
flat = true

[node name="bg" type="ColorRect" parent="BoatButton"]
modulate = Color(0.93882304, 0.25400537, 0.5964142, 0.49019608)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanneryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 233.0
offset_right = 921.0
offset_bottom = 433.0
text = "Cannery"

[node name="bg" type="ColorRect" parent="CanneryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.33333334, 0.24705882, 0.18431373, 0.6627451)

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 24.0
offset_right = 817.0
offset_bottom = 55.0
text = "Upgrades
"

[node name="ColorRect" type="ColorRect" parent="UpgradeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.7372549, 0.17254902, 0.64705884, 0.4745098)

[node name="PrestigeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 60.0
offset_right = 817.0
offset_bottom = 91.0
text = "Prestige"

[node name="SkillTreeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 96.0
offset_right = 817.0
offset_bottom = 127.0
text = "Skills"

[node name="MarketButton" type="Button" parent="."]
layout_mode = 0
offset_left = 505.0
offset_top = 466.0
offset_right = 646.0
offset_bottom = 536.0
text = "Market"

[node name="ColorRect" type="ColorRect" parent="MarketButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.21568628, 0.5686275, 0.827451, 0.5137255)

[node name="CrewButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 370.0
offset_right = 190.0
offset_bottom = 410.0
text = "Crew"

[node name="CrewProgress" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 418.0
offset_right = 190.0
offset_bottom = 434.0
max_value = 1.0

[node name="CrewStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 438.0
offset_right = 190.0
offset_bottom = 460.0
text = "Crew locked"

[node name="CrewSelectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 466.0
offset_right = 190.0
offset_bottom = 496.0
text = "Crew Roster"

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 470.0
offset_right = 790.0
offset_bottom = 510.0
text = "Inventory"

[node name="RecipesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 520.0
offset_right = 790.0
offset_bottom = 560.0
text = "Recipes"

[node name="ModalLayer" type="CanvasLayer" parent="."]

[node name="Dimmer" type="ColorRect" parent="ModalLayer"]
visible = false
self_modulate = Color(0, 0, 0, 0.003921569)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7607843)

[node name="FishingScreen" parent="ModalLayer" instance=ExtResource("2_0xm2m")]
visible = false

[node name="CanneryScreen" parent="ModalLayer" instance=ExtResource("3_h2yge")]
visible = false

[node name="UpgradeScreen" parent="ModalLayer" instance=ExtResource("4_1bvp3")]
visible = false

[node name="MarketScreen" parent="ModalLayer" instance=ExtResource("5_lquwl")]
visible = false

[node name="CrewScreen" parent="ModalLayer" instance=ExtResource("6_0v6ff")]
visible = false

[node name="StartScreen" parent="ModalLayer" instance=ExtResource("7_3bknm")]

[node name="InventoryScreen" parent="ModalLayer" instance=ExtResource("8_2s3yr")]
visible = false

[node name="RecipeScreen" parent="ModalLayer" instance=ExtResource("9_6k8b2")]
visible = false

[node name="SkillTreeScreen" parent="ModalLayer" instance=ExtResource("10_r5mtm")]
visible = false

[node name="EndingScreen" type="PanelContainer" parent="ModalLayer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -160.0
offset_right = 220.0
offset_bottom = 160.0

[node name="EndingVBox" type="VBoxContainer" parent="ModalLayer/EndingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="EndingTitle" type="Label" parent="ModalLayer/EndingScreen/EndingVBox"]
layout_mode = 2
text = "Ending Reached"
horizontal_alignment = 1

[node name="EndingSubtitle" type="Label" parent="ModalLayer/EndingScreen/EndingVBox"]
layout_mode = 2
text = "Summary"
horizontal_alignment = 1

[node name="EndingStats" type="Label" parent="ModalLayer/EndingScreen/EndingVBox"]
layout_mode = 2
text = "Stats"
autowrap_mode = 3

[node name="EndingHint" type="Label" parent="ModalLayer/EndingScreen/EndingVBox"]
layout_mode = 2
text = "New Game+ will be available after completion."
autowrap_mode = 3

[node name="EndingReturnButton" type="Button" parent="ModalLayer/EndingScreen/EndingVBox"]
layout_mode = 2
text = "Return to Start"

[node name="FishLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 15.0
offset_right = 69.0
offset_bottom = 38.0
text = "Fish: 0"

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 302.0
offset_top = 8.0
offset_right = 382.0
offset_bottom = 31.0
text = "Money: $0"

[node name="TinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 8.0
offset_right = 191.0
offset_bottom = 31.0
text = "Tins: 0"

[node name="LifetimeEarningsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 15.0
offset_right = 598.0
offset_bottom = 38.0
text = "Total Earnings: $0"

[node name="OceanHealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 18.0
offset_right = 958.0
offset_bottom = 41.0
text = "Ocean"

[node name="OceanHealthBar" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 39.0
offset_right = 978.0
offset_bottom = 51.0
tooltip_text = "Ocean health changes with fishing pressure and regenerates over time."
color = Color(0.1, 0.1, 0.1, 0.6)

[node name="OceanHealthFill" type="ColorRect" parent="OceanHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.6, 1, 0.85)

[node name="ReputationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 40.0
offset_right = 700.0
offset_bottom = 63.0
text = "Reputation: 0 (Prestige: 0)"

[node name="PrestigeConfirm" type="ConfirmationDialog" parent="."]
title = "Prestige Run"
ok_button_text = "Prestige"
dialog_text = "Prestige now?"

[connection signal="pressed" from="BoatButton" to="." method="_on_boat_button_pressed"]
[connection signal="pressed" from="CanneryButton" to="." method="_on_cannery_button_pressed"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="PrestigeButton" to="." method="_on_prestige_button_pressed"]
[connection signal="pressed" from="MarketButton" to="." method="_on_market_button_pressed"]
[connection signal="pressed" from="CrewButton" to="." method="_on_crew_button_pressed"]
[connection signal="pressed" from="CrewSelectButton" to="." method="_on_crew_select_button_pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="RecipesButton" to="." method="_on_recipes_button_pressed"]
[connection signal="confirmed" from="PrestigeConfirm" to="." method="_on_prestige_confirmed"]
[connection signal="pressed" from="SkillTreeButton" to="." method="_on_skill_tree_button_pressed"]
[connection signal="pressed" from="ModalLayer/EndingScreen/EndingVBox/EndingReturnButton" to="." method="_on_ending_return_pressed"]
